docs/api/qiskit/0.19/qiskit.circuit.library.CU1Gate.mdx
---
title: CU1Gate (v0.19)
description: API reference for qiskit.circuit.library.CU1Gate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CU1Gate
---

# CU1Gate

<Class id="qiskit.circuit.library.CU1Gate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/u1.py" signature="CU1Gate(theta, label=None, ctrl_state=None)" modifiers="class">
  Controlled-U1 gate.

  This is a diagonal and symmetric gate that induces a phase on the state of the target qubit, depending on the control state.

  **Circuit symbol:**

  ```python
  q_0: ─■──
        │λ
  q_1: ─■──
  ```

  **Matrix representation:**

$$
\begin{split}CU1 =
|0\rangle\langle 0| \otimes I + |1\rangle\langle 1| \otimes U1 =
\begin{pmatrix}
1 & 0 & 0 & 0 \\
0 & 1 & 0 & 0 \\
0 & 0 & 1 & 0 \\
0 & 0 & 0 & e^{i\lambda}
\end{pmatrix}\end{split}
$$

  <Admonition title="See also" type="note">
    `CRZGate`: Due to the global phase difference in the matrix definitions of U1 and RZ, CU1 and CRZ are different gates with a relative phase difference.
  </Admonition>

  Create new CU1 gate.

  ## Attributes

  <span id="cu1gate-ctrl-state" />

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CU1Gate.ctrl_state" attributeTypeHint="int">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  <span id="cu1gate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.CU1Gate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="cu1gate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.CU1Gate.definition" attributeTypeHint="List">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  <span id="cu1gate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.CU1Gate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="cu1gate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.CU1Gate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="cu1gate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.CU1Gate.add_decomposition" signature="CU1Gate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="cu1gate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.CU1Gate.assemble" signature="CU1Gate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="cu1gate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.CU1Gate.broadcast_arguments" signature="CU1Gate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="cu1gate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.CU1Gate.c_if" signature="CU1Gate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="cu1gate-control" />

  ### control

  <Function id="qiskit.circuit.library.CU1Gate.control" signature="CU1Gate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Controlled version of this gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="cu1gate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.CU1Gate.copy" signature="CU1Gate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="cu1gate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.CU1Gate.inverse" signature="CU1Gate.inverse()">
    Return inverted CU1 gate ($CU1(\lambda){\dagger} = CU1(-\lambda)$)
  </Function>

  <span id="cu1gate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.CU1Gate.is_parameterized" signature="CU1Gate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="cu1gate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.CU1Gate.mirror" signature="CU1Gate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="cu1gate-power" />

  ### power

  <Function id="qiskit.circuit.library.CU1Gate.power" signature="CU1Gate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="cu1gate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.CU1Gate.qasm" signature="CU1Gate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="cu1gate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.CU1Gate.repeat" signature="CU1Gate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="cu1gate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.CU1Gate.to_matrix" signature="CU1Gate.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.

    **Return type**

    `ndarray`
  </Function>
</Class>

